# sidebands_vst

./: CMakeLists.txt  README.md
.github/workflows/: linux.yml  mac.yml  windows.yml
cmake/: FileEmbed.cmake
resource/: Info.plist  sidebands.uidesc  start.html  switches.kra  toggle_switch.kra  win32resource.rc
source/: constants.h  globals.cc  globals.h  sidebands_cids.h  sidebands_controller.cc  sidebands_controller.h  sidebands_entry.cc  sidebands_processor.cc  sidebands_processor.h  tags.cc  tags.h  version.h
source/controller/: patch_controller.cc  patch_controller.h  sidebands_controller.cc  sidebands_controller.h  webview.h  webview_controller_bindings.cc  webview_controller_bindings.h  webview_pluginview.cc  webview_pluginview.h
source/controller/ui/: analysis_view.cc  analysis_view.h  drawbar_view.cc  drawbar_view.h  envelope_editor_view.cc  envelope_editor_view.h  generator_editor_view.cc  generator_editor_view.h  graphical_envelope_editor.cc  graphical_envelope_editor.h  gui_constants.h  lfo_editor_view.cc  lfo_editor_view.h  mod_target_view.cc  mod_target_view.h  modulator_editor_view.cc  parameter_editor_view.cc  parameter_editor_view.h  patch_param_view.cc  patch_param_view.h  spectrum_view.cc  spectrum_view.h  waveform_view.cc  waveform_view.h
source/controller/webui/: controls.ts  index.html  index.ts  package.json  pureknob.js  pureknob.ts  sidebandsModel.ts  style.css  templates.tsx  tsconfig.json  views.ts  webpack.config.js
source/controller/webui/model/: sidebands_model.ts  vst_model.ts
source/controller/webui/view/: controls.ts  envelope_editor_view.ts  generator_tab_view.ts  harmonics_analysis_view.ts  main_view.ts  modrow.ts  pureknob.ts  switch.ts  templates.tsx  views.ts
source/controller/webview/: webview.cc  webview.h  webview_c.cc  webview_c.h  webview_gtk.h  webview_win32.cc  webview_win32.h
source/controller/webview/gtk/: webview_gtk.cc
source/controller/webview/osx/: webview_osx.h
source/controller/webview/win32/: webview_edge_chromium.cc  webview_edge_chromium.h  webview_win32.cc  webview_win32.h
source/dsp/: dc_block.cc  dc_block.h  fft.cc  fft.h  integrator.cc  integrator.h  leak_dc.cc  leak_dc.h  oscbuffer.cc  oscbuffer.h  pole_dc.cc  pole_dc.h
source/processor/: events.h  patch_processor.cc  patch_processor.h  sample_accurate_value.h  sidebands_processor.cc  sidebands_processor.h
source/processor/synthesis/: adsr_envgen.cc  adsr_envgen.h  dsp.cc  dsp.h  envgen.cc  envgen.h  generator.cc  generator.h  lfo.cc  lfo.h  modulation_source.h  oscillator.cc  oscillator.h  player.cc  player.h  voice.cc  voice.h
source/processor/util/: parameter.cc  parameter.h  processor_param_value.h  sample_accurate_value.cc  sample_accurate_value.h
source/synthesis/: dsp.cc  dsp.h  envgen.cc  envgen.h  generator.cc  generator.h  lfo.cc  lfo.h  modulation_source.h  oscillator.cc  oscillator.h  patch.cc  patch.h  player.cc  player.h  sample_accurate_value.h  voice.cc  voice.h
source/ui/: analysis_view.cc  analysis_view.h  drawbar_view.cc  drawbar_view.h  envelope_editor.cc  envelope_editor.h  envelope_editor_view.cc  envelope_editor_view.h  generator_editor_view.cc  generator_editor_view.h  graphical_envelope_editor.cc  graphical_envelope_editor.h  lfo_editor_view.cc  lfo_editor_view.h  mod_target_view.cc  mod_target_view.h  modulator_editor_view.cc  modulator_editor_view.h  parameter_editor_view.cc  parameter_editor_view.h  patch_param_view.cc  patch_param_view.h  spectrum_view.cc  spectrum_view.h  waveform_view.cc  waveform_view.h
vstwebview/: CMakeLists.txt
vstwebview/include/vstwebview/: bindings.h
vstwebview/src/vstwebview/: webview.cc
vstwebview/src/vstwebview/win32/: webview_edge_chromium.cc  webview_edge_chromium.h  webview_win32.cc  webview_win32.h
